# ivf2_app

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_windows.cmd  vcpkg.json
assets/: slow_beats.pkf
src/: audio_player.cpp  audio_player.h  control_center_window.cpp  control_center_window.h  creative_app.cpp  creative_app.h  creative_scene.h  flow_field_demo.cpp  ivf_app.cpp  lattice_scene.cpp  lattice_scene.h  lorenz_scene.cpp  lorenz_scene.h  midi_binder.cpp  midi_binder.h  particle_scene.cpp  particle_scene.h  scene_controls_window.cpp  scene_controls_window.h  tunnel_scene.cpp  tunnel_scene.h
